[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boltzpay-crewai"
version = "0.1.1"
description = "CrewAI tools for BoltzPay — pay for API data with AI agents"
readme = "README.md"
license = "MIT"
authors = [{ name = "BoltzPay Contributors" }]
requires-python = ">=3.10"
keywords = ["crewai", "boltzpay", "x402", "acp", "ai-agent", "payment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "crewai>=0.100.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/leventilo/boltzpay"
Documentation = "https://boltzpay.ai"
Repository = "https://github.com/leventilo/boltzpay"
Issues = "https://github.com/leventilo/boltzpay/issues"

[tool.setuptools.packages.find]
include = ["boltzpay_crewai*"]
